# q3d-editor

./: .gitmodules  CMakeLists.txt  Makefile  TODO.md
res/: default.json  depth.vert  main.frag  main.vert  post.frag  post.vert  text.frag  text.vert
src/: app.cpp  app.hpp  config.txx  main.cpp
